Cleanup DocumentedException and subclasses
Do not qualify Error{Type,Tag,Severity} and use Map.of() instead
of Collections.emptyMap().

Change-Id: I9eb201a2c02f8ac4370341a98fdf94a1f7a6425e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>